<resources>
    <string name="app_name">Lusitania Travel</string>
    <string name="txt_main_localizacao">Localização Atual</string>
    <string name="txt_main_checkin">Check-In</string>
    <string name="txt_main_checkout">Check-Out</string>
    <string name="txt_main_quartos">Quartos</string>
    <string name="txt_main_pessoas">Pessoas</string>
    <string name="txt_main_pesquisar">Pesquisar</string>
    <string name="txt_username">Username</string>
    <string name="txt_passwordSignUp">Password</string>
    <string name="txt_repeatPassword">Repeat Password</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_emailSignUp">Email</string>
    <string name="txt_telemovel">Telemovel</string>
    <string name="txt_rua">Rua</string>
    <string name="txt_localidade">Localidade</string>
    <string name="txt_codPostal">Codigo Postal</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="txt_lusitania_travel">Lusitânia Travel</string>
    <string name="txt_menu_pesquisa">Pesquisa</string>
    <string name="txt_menu_favoritos">Favoritos</string>
    <string name="txt_menu_reservas">Reservas</string>
    <string name="txt_menu_conta">Conta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_item_nome">Nome: </string>
    <string name="txt_item_responsavel">Responsável</string>
    <string name="txt_item_tipo">Tipo: </string>
    <string name="txt_item_localizacao">Localização: </string>
    <string name="txt_item_acomodacoes">Acomodações: </string>
    <string name="txt_item_tipo_de_quartos">Tipo de Quartos</string>
    <string name="txt_item_n_quartos">Nº Quartos </string>
    <string name="txt_item_preco_por_noite">Preço:</string>
    <string name="txt_menu_home">Home</string>
    <string name="txt_user_definicoes">Definições</string>
    <string name="txt_user_meus_comentarios">Os Meus Comentários</string>
    <string name="txt_user_faturas">As Minhas Faturas</string>
    <string name="txt_definicoes_username">Username</string>
    <string name="txt_definicoes_email">Email</string>
    <string name="txt_definicoes_nome">Nome</string>
    <string name="txt_definicoes_telemovel">Telemóvel</string>
    <string name="txt_definicoes_rua">Rua</string>
    <string name="txt_definicoes_localidade">Localidade</string>
    <string name="txt_definicoes_codigo_postal">Código Postal</string>
    <string name="txt_lista_fornecedor_alojamentos">Os Nossos Alojamentos</string>
    <string name="txt_reserva_tipo">Tipo:</string>
    <string name="txt_reserva_checkin">Check-in:</string>
    <string name="txt_reserva_checkout">Check-out:</string>
    <string name="txt_reserva_n_quartos">Número de Quartos:</string>
    <string name="txt_reserva_n_clientes">Número de Clientes:</string>
    <string name="txt_reserva_valor">Valor:</string>
    <string name="txt_reserva_alojamento">Alojamento:</string>
    <string name="txt_fatura_total_fatura">Total Fatura:</string>
    <string name="txt_fatura_total_s_iva">Total S/Iva:</string>
    <string name="txt_fatura_iva">Iva:</string>
    <string name="txt_fatura_reserva">Reserva:</string>
    <string name="txt_fatura_detalhes">Detalhes</string>
    <string name="txt_reserva_detalhes">Detalhes</string>
    <string name="txt_fatura_data">Data:</string>
    <string name="txt_pesquisa_localizacao">Localização</string>
    <string name="txt_pesquisa_pesquisar">Pesquisar</string>
    <string name="txt_detalhes_tipo_quartos">Tipo Quartos:</string>
    <string name="txt_detalhes_n_quartos_disponiveis">Nº Quartos Disponíveis:</string>
    <string name="txt_carrinho_reserva">Reserva:</string>
    <string name="txt_carrinho_quantidade">Quantidade:</string>
    <string name="txt_carrinho_preco">Preço por noite:</string>
    <string name="txt_carrinho_subtotal">Preço Total:</string>
    <string name="txt_carrinho_estado">Estado:</string>
    <string name="txt_definicoes_editar_perfil">Editar Perfil</string>
    <string name="txt_carrinho_verificar_disponibilidade">Verificar Disponibilidade</string>
    <string name="txt_verificar_checkin_checkout">Check-In e Check-Out:</string>
    <string name="txt_verificar_n_de_clientes">Número de Clientes:</string>
    <string name="txt_verificar_n_de_quartos">Número de Quartos:</string>
    <string name="txt_verificar_tipo_de_quartos">Tipo de Quartos:</string>
    <string name="txt_verificar_n_de_camas">Número de Camas:</string>
    <string name="txt_reserva_id">Reserva:</string>
    <string name="txt_pagamento_entidade">Entidade</string>
    <string name="txt_pagamento_referencia">Referência</string>
    <string name="txt_pagamento_valor">Valor</string>
    <string name="txt_detalhes_adicionar_comentario">Adicionar Comentário</string>
    <string name="txt_detalhes_comentario">Adicione um comentário</string>
    <string name="txt_detalhes_comentario_titulo">Adicione um título</string>
    <string name="txt_linhareserva_tipo_quarto">Tipo de Quartos:</string>
    <string name="txt_linhareserva_n_de_noites">Número de Noites:</string>
    <string name="txt_linhareserva_n_de_camas">Número de Camas:</string>
    <string name="txt_fatura_id">Fatura:</string>
    <string name="txt_fatura_quantidade">Quantidade:</string>
    <string name="txt_fatura_preco">Preço Unitário:</string>
    <string name="txt_reserva_estado">Estado:</string>
    <string name="txt_comentario_alojamento">Alojamento:</string>
    <string name="txt_comentario">Comentário:</string>
    <string name="txt_comentario_avaliacao">Avaliação:</string>
    <string name="txt_detalhes_comentarios">Detalhes do Comentário</string>
    <string name="txt_comentario_titulo">Título:</string>
    <string name="txt_comentario_descricao">Descrição:</string>
    <string name="txt_comentario_data">Data Comentário:</string>
    <string name="txt_comentario_data_avaliacao">Data Avaliação:</string>
    <string name="txt_definicoes_salvar">Salvar</string>
    <string name="txt_definicoes_cancelar">Cancelar</string>
    <string name="txt_fornecedor_detalhes">Detalhes</string>
    <string name="txt_comentario_nome">Nome:</string>
    <string name="txt_adicionar_comentario">Adicionar Comentário</string>
    <string-array name="tipo_quartos">
        <item>Quarto Individual</item>
        <item>Quarto Duplo</item>
        <item>Quarto Triplo</item>
        <item>Quarto Familiar</item>
        <item>Villa</item>
    </string-array>
    <string-array name="numero_clientes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="numero_quartos">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="numero_camas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>