<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AlterarUserFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_definicoes_editar_perfil"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/editTextFieldUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_definicoes_username"/>

    <EditText
        android:id="@+id/editTextFieldEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_definicoes_email"/>

    <EditText
        android:id="@+id/editTextFieldNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_definicoes_nome"/>

    <EditText
        android:id="@+id/editTextFieldTelemovel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_definicoes_telemovel"/>

    <EditText
        android:id="@+id/editTextFieldRua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_definicoes_rua"/>

    <EditText
        android:id="@+id/editTextFieldLocalidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_definicoes_localidade"/>

    <EditText
        android:id="@+id/editTextFieldCodPostal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_definicoes_codigo_postal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_definicoes_salvar"
            android:clickable="true"
            android:focusable="false"
            android:visibility="visible"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blue"/>

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_definicoes_cancelar"
            android:clickable="true"
            android:focusable="false"
            android:visibility="visible"
            android:backgroundTint="@color/red"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>