<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".DefinicoesFragment">

    <!-- User Details -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_conta"
        android:contentDescription="Imagem de Perfil"
        android:layout_marginTop="32dp"
        app:tint="@color/blue"/>

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_definicoes_username"
        android:gravity="center"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_definicoes_email"
        android:gravity="center"
        android:textSize="18sp"/>

    <!-- Profile Details -->
    <TextView
        android:id="@+id/textViewProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_definicoes_nome"
        android:gravity="center"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewProfileMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_definicoes_telemovel"
        android:gravity="center"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewProfileStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_definicoes_rua"
        android:gravity="center"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewProfileLocale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_definicoes_localidade"
        android:gravity="center"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/textViewProfilePostalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_definicoes_codigo_postal"
        android:gravity="center"
        android:textSize="18sp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_definicoes_editar"
        android:backgroundTint="@color/blue" />
</LinearLayout>
