<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    tools:context=".DetalhesComentarioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_detalhes_comentarios"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewComentarioId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_comentario"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvComentarioId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFornecedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_comentario_alojamento"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFornecedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_comentario_titulo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDescricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_comentario_descricao"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_comentario_data"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAvaliacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_comentario_avaliacao"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAvaliacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDataAvaliacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_comentario_data_avaliacao"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDataAvaliacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>