<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    tools:context=".DetalhesFaturaFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewFaturaId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fatura_id"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFaturaId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTotalFatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fatura_total_fatura"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotalFatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTotalSI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fatura_total_s_iva"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTotalSI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewIva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fatura_iva"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fatura_data"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewReserva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fatura_reserva"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvReserva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewQuantidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fatura_quantidade"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvQuantidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewPrecoUnitario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fatura_preco"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPrecoUnitario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>