<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    tools:context=".AdicionarComentarioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Adicionar Comentário"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="16dp"/>

        <EditText
            android:id="@+id/editTextTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_detalhes_comentario_titulo"/>

        <EditText
            android:id="@+id/editTextComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_detalhes_comentario"/>

        <RatingBar
            android:id="@+id/ratingBarAvaliacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1"
            android:rating="0" />

        <Button
            android:id="@+id/btnAdicionarComentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_detalhes_adicionar_comentario"
            android:backgroundTint="@color/blue"/>
    </LinearLayout>

</RelativeLayout>